php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #36568 memory_limit has no effect
Submitted: 2006-03-01 12:39 UTC Modified: 2006-03-14 15:20 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:0 (0.0%)
Same OS:1 (100.0%)
From: dmitry@php.net Assigned: dmitry (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 6CVS-2006-03-01 (CVS) OS: win32
Private report: No CVE-ID: None
 [2006-03-01 12:39 UTC] dmitry@php.net
Description:
------------
On windows "memory_limit" setting in php.ini has no effect.

It is because of separate config file zend_config.w32.h that is not include "main/config.w32.h". The macro MEMORY_LIMIT is defined in "main/config.w32.h" and is not visible during compilation of "zend_alloc.c".

Reproduce code:
---------------
<?php
ini_set("memory_limit", "32M");
echo ini_get("memory_limit");
?>


Expected result:
----------------
32M

Actual result:
--------------
8M

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-03-01 13:31 UTC] edink@php.net
Windows builds are made without enabling memory limit since the dawn of time. Is there a need to change this? I didn't hear that many requests for this.
 [2006-03-14 15:20 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_1.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC