Fixed bug #36568 (memory_limit setting on win32 has no effect)