Zend/zend_config.w32.h
@@ -5,7 +5,7 @@
    | Copyright (c) 1998-2006 Zend Technologies Ltd. (http://www.zend.com) |
    +----------------------------------------------------------------------+
    | This source file is subject to version 2.00 of the Zend license,     |
-   | that is bundled with this package in the file LICENSE, and is        | 
+   | that is bundled with this package in the file LICENSE, and is        |
    | available through the world-wide-web at the following url:           |
    | http://www.zend.com/license/2_00.txt.                                |
    | If you did not receive a copy of the Zend license and are unable to  |
@@ -23,8 +23,9 @@
 #define ZEND_CONFIG_W32_H
 
 #define USE_ZEND_ALLOC 1
-#define HAVE_ALLOCA 1
-#define HAVE_LIMITS_H 1
+
+#include <../main/config.w32.h>
+
 #define _CRTDBG_MAP_ALLOC
 
 #include <malloc.h>
@@ -44,19 +45,9 @@
 typedef unsigned long ulong;
 typedef unsigned int uint;
 
-#undef HAVE_KILL
-#define HAVE_GETPID 1
-/* #define HAVE_ALLOCA_H 1 */
-#define HAVE_MEMCPY 1
-#define HAVE_STRDUP 1
-#define HAVE_SYS_TYPES_H 1
 #define HAVE_STDIOSTR_H 1
 #define HAVE_CLASS_ISTDIOSTREAM
 #define istdiostream stdiostream
-#define HAVE_STDARG_H	1
-#define HAVE_SNPRINTF	1
-#define HAVE_VSNPRINTF	1
-#define HAVE_STRCOLL	1
 
 #define snprintf _snprintf
 #define vsnprintf _vsnprintf
@@ -87,7 +78,7 @@ typedef unsigned int uint;
 #define ZEND_DLEXPORT		__declspec(dllexport)
 #define ZEND_DLIMPORT		__declspec(dllimport)
 
-/* 0x00200000L is MB_SERVICE_NOTIFICATION, which is only supported under Windows NT 
+/* 0x00200000L is MB_SERVICE_NOTIFICATION, which is only supported under Windows NT
  * (and requires _WIN32_WINNT to be defined, which prevents the resulting executable
  * from running under Windows 9x
  * Windows 9x should silently ignore it, so it's being used here directly
